--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "nodemon": "^2.0.15"
   },
   "scripts": {
