--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "node app.js"
